fix footer alignment

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,6 +9,7 @@
     height: 3rem;
     display: flex;
     align-items: center;
+    align-content: center;
     justify-content: space-between;
     opacity: 50%;
     color: $color-primary-text;
@@ -21,7 +22,9 @@
     @include desktop {
         @include side-padding-tab-desk;
     }
-
+    &__text {
+        align-self: start;
+    }
     &__link {
         text-decoration: none;
         color: $color-primary-text;
